Use ef create db. | Configure settings. | Retrieve data async. | > ng new Magnetic-SPA.

--- a/Magnetic.API/appsettings.json
+++ b/Magnetic.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Magnetic.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
